Updated Scraping Code
Added Parent Id for comments to track replies and build reply graphs

--- a/scrape_politics_subreddit.ipynb
+++ b/scrape_politics_subreddit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4377345b",
    "metadata": {},
    "outputs": [
@@ -10,30 +10,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "INFO:root:Rate Limit Info: Used: 209, Remaining: 791.0, Reset in: 60 seconds\n",
+      "INFO:root:Rate Limit Info: Used: 377, Remaining: 623.0, Reset in: 60 seconds\n",
       "WARNING:root:Too many requests when loading comments. Sleeping for 5 seconds...\n",
-      "INFO:root:Rate Limit Info: Used: 662, Remaining: 338.0, Reset in: 60 seconds\n",
+      "INFO:root:Rate Limit Info: Used: 552, Remaining: 448.0, Reset in: 60 seconds\n",
+      "INFO:root:Rate Limit Info: Used: 331, Remaining: 669.0, Reset in: 60 seconds\n",
       "WARNING:root:Too many requests when loading comments. Sleeping for 5 seconds...\n",
-      "WARNING:root:Too many requests when loading comments. Sleeping for 5 seconds...\n",
-      "INFO:root:Rate Limit Info: Used: 27, Remaining: 973.0, Reset in: 60 seconds\n",
-      "WARNING:root:Too many requests when loading comments. Sleeping for 5 seconds...\n",
-      "INFO:root:Rate Limit Info: Used: 878, Remaining: 122.0, Reset in: 60 seconds\n",
-      "INFO:root:Rate Limit Info: Used: 592, Remaining: 408.0, Reset in: 60 seconds\n",
-      "INFO:root:Rate Limit Info: Used: 750, Remaining: 250.0, Reset in: 60 seconds\n",
-      "INFO:root:Rate Limit Info: Used: 348, Remaining: 652.0, Reset in: 60 seconds\n",
-      "WARNING:root:Too many requests when loading comments. Sleeping for 5 seconds...\n",
-      "INFO:root:Rate Limit Info: Used: 760, Remaining: 240.0, Reset in: 60 seconds\n",
-      "WARNING:root:Too many requests when loading comments. Sleeping for 5 seconds...\n",
-      "WARNING:root:Too many requests when loading comments. Sleeping for 5 seconds...\n",
-      "INFO:root:Rate Limit Info: Used: 760, Remaining: 240.0, Reset in: 60 seconds\n",
-      "WARNING:root:Too many requests when loading comments. Sleeping for 5 seconds...\n",
-      "WARNING:prawcore:Retrying due to ReadTimeout(ReadTimeoutError(\"HTTPSConnectionPool(host='oauth.reddit.com', port=443): Read timed out. (read timeout=16.0)\")) status: POST https://oauth.reddit.com/api/morechildren/\n",
-      "WARNING:prawcore:Retrying due to ConnectionError(MaxRetryError(\"HTTPSConnectionPool(host='oauth.reddit.com', port=443): Max retries exceeded with url: /api/morechildren/?raw_json=1 (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x120474590>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known'))\")) status: POST https://oauth.reddit.com/api/morechildren/\n",
-      "WARNING:prawcore:Retrying due to ReadTimeout(ReadTimeoutError(\"HTTPSConnectionPool(host='oauth.reddit.com', port=443): Read timed out. (read timeout=16.0)\")) status: GET https://oauth.reddit.com/comments/1fzv4uh/_/lr4ram4\n",
-      "WARNING:prawcore:Retrying due to ReadTimeout(ReadTimeoutError(\"HTTPSConnectionPool(host='oauth.reddit.com', port=443): Read timed out. (read timeout=16.0)\")) status: POST https://oauth.reddit.com/api/morechildren/\n",
-      "WARNING:prawcore:Retrying due to ReadTimeout(ReadTimeoutError(\"HTTPSConnectionPool(host='oauth.reddit.com', port=443): Read timed out. (read timeout=16.0)\")) status: POST https://oauth.reddit.com/api/morechildren/\n",
-      "INFO:root:Rate Limit Info: Used: 349, Remaining: 651.0, Reset in: 60 seconds\n",
-      "INFO:root:Rate Limit Info: Used: 504, Remaining: 496.0, Reset in: 60 seconds\n",
-      "INFO:root:Total posts scraped: 982\n"
+      "INFO:root:Rate Limit Info: Used: 551, Remaining: 449.0, Reset in: 60 seconds\n",
+      "INFO:root:Rate Limit Info: Used: 169, Remaining: 831.0, Reset in: 60 seconds\n",
+      "INFO:root:Rate Limit Info: Used: 360, Remaining: 640.0, Reset in: 60 seconds\n",
+      "INFO:root:Rate Limit Info: Used: 488, Remaining: 512.0, Reset in: 60 seconds\n",
+      "WARNING:prawcore:Retrying due to ConnectionError(ReadTimeoutError(\"HTTPSConnectionPool(host='oauth.reddit.com', port=443): Read timed out.\")) status: GET https://oauth.reddit.com/comments/1g1fjrj/_/lrgpnb0\n",
+      "INFO:root:Rate Limit Info: Used: 303, Remaining: 697.0, Reset in: 60 seconds\n",
+      "INFO:root:Rate Limit Info: Used: 46, Remaining: 954.0, Reset in: 60 seconds\n",
+      "INFO:root:Total posts scraped: 977\n"
      ]
     }
    ],
@@ -43,6 +33,8 @@
     "from redditClient import redditClient\n",
     "from prawcore.exceptions import TooManyRequests, RequestException\n",
     "import logging\n",
+    "import networkx as nx\n",
+    "import json\n",
     "\n",
     "# Configure logging to see detailed output\n",
     "logging.basicConfig(level=logging.INFO)\n",
@@ -132,6 +124,7 @@
     "                        'author': comment_author,\n",
     "                        'score': comment.score,\n",
     "                        'created_utc': comment.created_utc,\n",
+    "                        'parent_id': comment.parent_id  # Capture parent_id to preserve the comment thread structure\n",
     "                    }\n",
     "                    post_data['comments'].append(comment_data)\n",
     "\n",
@@ -183,45 +176,17 @@
     "\n",
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
+    "    # Scrape the data\n",
     "    data = scrape_r_politics_comments()\n",
     "\n",
     "    # Print the scraped data length to verify\n",
     "    logging.info(f\"Total posts scraped: {len(data)}\")\n",
     "\n",
-    "    # Optionally, save the data to a JSON file for further analysis\n",
-    "    import json\n",
+    "    #save the data to a JSON file for further analysis\n",
     "    with open(\"r_politics_last_30_days_posts_and_comments.json\", \"w\") as outfile:\n",
-    "        json.dump(data, outfile, indent=4)"
+    "        json.dump(data, outfile, indent=4)\n",
+    "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ea8f8fd3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total posts: 982, Total comments: 110509\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_posts = len(data)  # Number of posts\n",
-    "total_comments = sum(len(post['comments']) for post in data)  # Number of comments\n",
-    "\n",
-    "print(f\"Total posts: {total_posts}, Total comments: {total_comments}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "241024ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
